# spaceship-titanic

./: .gitignore  Dockerfile  README.md  flask_app.py  ml.ipynb  ml2.ipynb  ml3.ipynb  model.py  pyproject.toml  requirements.txt
model/: model.pkl
work_data/: x_test.csv  x_train.csv  y_train.csv
